[metadata]
name = Flask_Comment
version = attr: flask_comment.__version__
license = MIT
author = Frank Yu
author_email = withyuxiaoy@gmail.com
description = Create comment component in Flask/Jinja2 template.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
url = https://github.com/yuxiaoy1/flask_comment
project_urls =
    Documentation = https://flask-comment.readthedocs.io
    Source = https://github.com/yuxiaoy1/flask_comment
    Changelog = https://flask-comment.readthedocs.io/en/latest/changelog.html
    Issue Tracker = https://github.com/yuxiaoy1/flask_comment/issues
keywords = flask, comment, extension
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Developers
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: MIT License
        Topic :: Internet :: WWW/HTTP :: Dynamic Content
        Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    flask_comment
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 100
# per-file-ignores =
    # __init__ module exports names
    # src/flask/__init__.py: F401

[mypy]
files = src/flask_comment
python_version = 3.6
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True
